--- a/app_py.ipynb
+++ b/app_py.ipynb
@@ -73,8 +73,8 @@
         "\n",
         "# Load Stable Diffusion model for text-to-image\n",
         "text_to_image = StableDiffusionPipeline.from_pretrained(\n",
-        "    # \"runwayml/stable-diffusion-v1-5\"\n",
-        "    \"stabilityai/sd-turbo\"\n",
+        "     \"runwayml/stable-diffusion-v1-5\"\n",
+        "   
         ")\n",
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"  # This will now work since torch is imported\n",
         "text_to_image.to(device)\n",
